--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,51 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.colors {
+  --devsite-primary-color: #ff6f00;
+
+  --devsite-secondary-color: #293241;
+
+  --devsite-caution-notice-background: #feefe3;
+
+  --devsite-caution-notice-border-color: transparent;
+
+  --devsite-caution-notice-color: #b31412;
+
+  --devsite-key-point-notice-background: #e8eaf6;
+
+  --devsite-key-point-notice-border-color: transparent;
+
+  --devsite-key-point-notice-color: #3f51b5;
+
+  --devsite-key-term-notice-background: #f3e8fd;
+
+  --devsite-key-term-notice-border-color: transparent;
+
+  --devsite-key-term-notice-color: #9334e6;
+
+  --devsite-note-notice-background: #e8f0fe;
+
+  --devsite-note-notice-border-color: transparent;
+
+  --devsite-note-notice-color: #303f9f;
+
+  --devsite-status-notice-background: #f1f3f4;
+
+  --devsite-status-notice-border-color: transparent;
+
+  --devsite-status-notice-color: #546e7a;
+
+  --devsite-success-notice-background: #e0f2f1;
+
+  --devsite-success-notice-border-color: transparent;
+
+  --devsite-success-notice-color: #00796b;
+
+  --devsite-warning-notice-background: #fce8e6;
+
+  --devsite-warning-notice-border-color: transparent;
+
+  --devsite-warning-notice-color: #a50e0e;
+}
